Feature/enable new component deletion failed status (#76)
* [deletion-failed-status] - Refactor to use status as an enum.

* [deletion-failed-status] - Add new deletion_failed state.

* [deletion-failed-status] - Add description.